[gd_scene format=3 uid="uid://bq5ht61tpigtg"]

[ext_resource type="Script" uid="uid://b04p5uj1m7pwp" path="res://Scripts/Enemy/Enemy1.2.gd" id="1_30xrl"]
[ext_resource type="Resource" uid="uid://bl1tb2vhb2btc" path="res://Resources/Enemies/SkeletalGruntMelee.tres" id="2_bftp8"]
[ext_resource type="Material" uid="uid://cfrxegokeyufx" path="res://Assets/Materials/EnemyOutline.tres" id="2_wkum4"]
[ext_resource type="Script" uid="uid://idne1o7mgwad" path="res://Scripts/Enemy/EnemyWorldDataDisplay.gd" id="4_rblcv"]
[ext_resource type="Animation" uid="uid://58d5l85xg3in" path="res://Assets/Animations/Rig_Mid_Animations/Skeletons_Awaken_Floor.res" id="5_rblcv"]
[ext_resource type="Script" uid="uid://cajf1u20kxsew" path="res://Scripts/Components/Entity/HurtBoxComponent.gd" id="6_j5l5s"]
[ext_resource type="Animation" uid="uid://bcq2ntobuwv3s" path="res://Assets/Animations/Rig_Mid_Animations/Skeletons_Awaken_Floor_Long.res" id="6_o5540"]
[ext_resource type="Animation" uid="uid://qlanctwguxmg" path="res://Assets/Animations/Rig_Mid_Animations/Skeletons_Awaken_Standing.res" id="7_j5l5s"]
[ext_resource type="Animation" uid="uid://bxxf5nkspwjyw" path="res://Assets/Animations/Rig_Mid_Animations/Skeletons_Death.res" id="8_woysm"]
[ext_resource type="Animation" uid="uid://bni1tnwgyhk0v" path="res://Assets/Animations/Rig_Mid_Animations/Skeletons_Death_Pose.res" id="9_eg3uj"]
[ext_resource type="Animation" uid="uid://cvdgfqqokt3ch" path="res://Assets/Animations/Rig_Mid_Animations/Skeletons_Death_Resurrect.res" id="10_uuevq"]
[ext_resource type="Animation" uid="uid://b0io3n8du4gwt" path="res://Assets/Animations/Rig_Mid_Animations/Skeletons_Idle.res" id="11_28wao"]
[ext_resource type="Animation" uid="uid://cqwd1x4hjj8ct" path="res://Assets/Animations/Rig_Mid_Animations/Skeletons_Inactive_Floor_Pose.res" id="12_u5vd5"]
[ext_resource type="Animation" uid="uid://d1w2qp1qqtbve" path="res://Assets/Animations/Rig_Mid_Animations/Skeletons_Inactive_Standing_Pose.res" id="13_taj7k"]
[ext_resource type="Animation" uid="uid://uba0p0u0gxkm" path="res://Assets/Animations/Rig_Mid_Animations/Skeletons_Spawn_Ground.res" id="14_f7vau"]
[ext_resource type="Animation" uid="uid://d2fi4trvecay0" path="res://Assets/Animations/Rig_Mid_Animations/Skeletons_Taunt.res" id="15_p6qnn"]
[ext_resource type="StyleBox" uid="uid://b48ll3i4j2q8c" path="res://Styles/Bars/EnemyHealthBarBackGround.tres" id="16_woysm"]
[ext_resource type="Animation" uid="uid://tilun801edo3" path="res://Assets/Animations/Rig_Mid_Animations/Skeletons_Taunt_Longer.res" id="16_yywwo"]
[ext_resource type="Animation" uid="uid://csx3ffbfw7pnh" path="res://Assets/Animations/Rig_Mid_Animations/Skeletons_Walking.res" id="17_ga1kb"]
[ext_resource type="Script" uid="uid://cy6s21smbmclc" path="res://Scripts/Components/Enemy/EnemyHealthComponent.gd" id="20_j5l5s"]
[ext_resource type="Script" uid="uid://c5l5du3uioa4l" path="res://Scripts/Components/Entity/StatComponent.gd" id="20_o5540"]
[ext_resource type="Script" uid="uid://bc1uy3rrsv6t1" path="res://Scripts/Components/Enemy/EnemyAnimationComponent.gd" id="21_o5540"]
[ext_resource type="PackedScene" uid="uid://chumvllowmp1y" path="res://Scenes/Components/TargetingComponent.tscn" id="21_rblcv"]
[ext_resource type="Script" uid="uid://bc3n38f2wf8mb" path="res://Scripts/Components/Enemy/EnemyVisualComponent.gd" id="21_vceqd"]
[ext_resource type="Script" uid="uid://dv2eb0682k1df" path="res://Scripts/Components/Enemy/EnemyRangeCombatComponent.gd" id="23_bftp8"]
[ext_resource type="Script" uid="uid://desq4g6x7ndaj" path="res://Scripts/Components/Enemy/ChaseComponent.gd" id="23_ppa7q"]
[ext_resource type="Script" uid="uid://c85ywpbihhprf" path="res://Scripts/Components/Enemy/AIControllerComponent.gd" id="24_ppa7q"]
[ext_resource type="Script" uid="uid://cj25lj11qx8gq" path="res://Scripts/Components/Entity/StatusEffectComponent.gd" id="26_rblcv"]
[ext_resource type="Script" uid="uid://pcfup1fxxeac" path="res://Scripts/Components/Enemy/EnemyLevelComponent.gd" id="27_o5540"]
[ext_resource type="Script" uid="uid://lhvkuongug5i" path="res://Scripts/Components/Enemy/EnemyCombatComponent.gd" id="28_rblcv"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_eg3uj"]
height = 2.2319336

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0bbxc"]

[sub_resource type="ViewportTexture" id="ViewportTexture_ml3mr"]
viewport_path = NodePath("Rig_Medium/Skeleton3D/HealthBarAttachment/EnemyWorldDataDisplay/SubViewport")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_81xlm"]
bg_color = Color(1, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_o5540"]
radius = 0.6713867

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1fxax"]
_data = {
&"Skeletons_Awaken_Floor": ExtResource("5_rblcv"),
&"Skeletons_Awaken_Floor_Long": ExtResource("6_o5540"),
&"Skeletons_Awaken_Standing": ExtResource("7_j5l5s"),
&"Skeletons_Death": ExtResource("8_woysm"),
&"Skeletons_Death_Pose": ExtResource("9_eg3uj"),
&"Skeletons_Death_Resurrect": ExtResource("10_uuevq"),
&"Skeletons_Idle": ExtResource("11_28wao"),
&"Skeletons_Inactive_Floor_Pose": ExtResource("12_u5vd5"),
&"Skeletons_Inactive_Standing_Pose": ExtResource("13_taj7k"),
&"Skeletons_Spawn_Ground": ExtResource("14_f7vau"),
&"Skeletons_Taunt": ExtResource("15_p6qnn"),
&"Skeletons_Taunt_Longer": ExtResource("16_yywwo"),
&"Skeletons_Walking": ExtResource("17_ga1kb")
}

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_bftp8"]

[node name="Enemy" type="CharacterBody3D" unique_id=1616704430 groups=["enemy"]]
collision_layer = 5
script = ExtResource("1_30xrl")
enemy_data = ExtResource("2_bftp8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=1178309170]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0852404, 0)
shape = SubResource("CapsuleShape3D_eg3uj")

[node name="Rig_Medium" type="Node3D" parent="." unique_id=1155823096]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 0, 0)

[node name="Skeleton3D" type="Skeleton3D" parent="Rig_Medium" unique_id=495456402]
unique_name_in_owner = true
bones/0/name = "root"
bones/0/parent = -1
bones/0/rest = Transform3D(1, 0, 2.3841855e-07, 0, 1, 0, -2.3841855e-07, 0, 1, 0, 0, 0)
bones/0/enabled = true
bones/0/position = Vector3(0.14870794, 0, 0.09517297)
bones/0/rotation = Quaternion(0, 1.19209275e-07, 0, 1)
bones/0/scale = Vector3(1, 1, 1)
bones/1/name = "hips"
bones/1/parent = 0
bones/1/rest = Transform3D(1, 0, -2.3841855e-07, 0, 1, 0, 2.3841855e-07, 0, 1, 0, 0.40566343, 0)
bones/1/enabled = true
bones/1/position = Vector3(0.01233443, -0.17384869, -0.034752812)
bones/1/rotation = Quaternion(-0.20128581, 0.16953747, -0.03539627, 0.96409965)
bones/1/scale = Vector3(1, 1, 0.99999994)
bones/2/name = "upperleg.l"
bones/2/parent = 1
bones/2/rest = Transform3D(1, -1.4221489e-07, -2.6560253e-08, -1.4305179e-07, -0.9993962, -0.034741182, -2.1603478e-08, 0.034741133, -0.9993976, 0.17094506, 0.11358726, 1.3923272e-08)
bones/2/enabled = true
bones/2/position = Vector3(0.5575353, 0.16051023, 0.6849289)
bones/2/rotation = Quaternion(0.0874458, -0.26666537, 0.5784129, -0.7659514)
bones/2/scale = Vector3(1.000001, 1.0000004, 1.0000005)
bones/3/name = "lowerleg.l"
bones/3/parent = 2
bones/3/rest = Transform3D(1, 1.612898e-07, 1.2085522e-07, -1.3211937e-07, 0.9774329, -0.21124826, -1.5219996e-07, 0.21124834, 0.97743255, 3.5798609e-09, 0.2270775, -6.1393925e-09)
bones/3/enabled = true
bones/3/position = Vector3(3.5798609e-09, 0.2270775, -6.1393925e-09)
bones/3/rotation = Quaternion(0.15349461, 6.8723075e-08, -1.11262e-07, 0.9881496)
bones/3/scale = Vector3(1.0000004, 0.9999999, 0.99999994)
bones/4/name = "foot.l"
bones/4/parent = 3
bones/4/rest = Transform3D(1, 4.6432643e-08, 6.012488e-08, -7.5927986e-08, 0.5855154, 0.8106606, 2.4370657e-09, -0.81066227, 0.5855142, 1.8315821e-10, 0.14943703, 9.667923e-10)
bones/4/enabled = true
bones/4/position = Vector3(1.8315821e-10, 0.14943703, 9.667923e-10)
bones/4/rotation = Quaternion(0.22042312, 0.6497123, -0.3475689, 0.63912714)
bones/4/scale = Vector3(0.99999964, 1.0000006, 0.99999946)
bones/5/name = "toes.l"
bones/5/parent = 4
bones/5/rest = Transform3D(-1, 1.332896e-07, 6.943393e-08, 4.2534086e-08, 0.6941041, -0.7198751, -1.4414618e-07, -0.71987, -0.694109, -1.5114125e-08, 0.16565003, 5.1719273e-09)
bones/5/enabled = true
bones/5/position = Vector3(-1.5114125e-08, 0.16565003, 5.1719273e-09)
bones/5/rotation = Quaternion(-0.0005672587, 0.9206832, -0.3903105, 0.00012851162)
bones/5/scale = Vector3(0.99999994, 0.99999774, 1.0000024)
bones/6/name = "spine"
bones/6/parent = 1
bones/6/rest = Transform3D(1, 0, 1.4210855e-14, 0, 1, 0, -1.4210855e-14, 0, 1, 0, 0.1919775, 0)
bones/6/enabled = true
bones/6/position = Vector3(0, 0.1919775, 0)
bones/6/rotation = Quaternion(-0.502448, -0.11192169, -0.11090311, 0.8501294)
bones/6/scale = Vector3(1, 1.0000001, 1.0000002)
bones/7/name = "chest"
bones/7/parent = 6
bones/7/rest = Transform3D(1, 0, -1.6940659e-21, 0, 0.99999994, 0, 1.6940659e-21, 0, 1, 0, 0.37498796, 0)
bones/7/enabled = true
bones/7/position = Vector3(0, 0.37498796, 0)
bones/7/rotation = Quaternion(-0.052597903, 0.01306044, 0.26918128, 0.96156347)
bones/7/scale = Vector3(1, 0.99999994, 1)
bones/8/name = "upperarm.r"
bones/8/parent = 7
bones/8/rest = Transform3D(0.05728419, -0.99835724, 4.4361707e-07, 5.6624367e-07, 4.7683673e-07, 0.99999976, -0.99835724, -0.05728419, 5.9262936e-07, -0.21200737, 0.13413215, 8.402462e-08)
bones/8/enabled = true
bones/8/position = Vector3(-1.410822, 0.7679034, -0.16011442)
bones/8/rotation = Quaternion(-0.14100009, 0.22893807, 0.45575607, 0.8485239)
bones/8/scale = Vector3(0.9999997, 0.9999992, 1)
bones/9/name = "lowerarm.r"
bones/9/parent = 8
bones/9/rest = Transform3D(0.99388725, -0.11040192, 1.2453701e-07, 0.110401966, 0.9938869, 3.9025445e-09, -1.2420661e-07, 9.87044e-09, 0.99999994, -7.1219225e-11, 0.24189733, -1.1940561e-07)
bones/9/enabled = true
bones/9/position = Vector3(-7.1219225e-11, 0.24189733, -1.1940561e-07)
bones/9/rotation = Quaternion(-0.1244111, -0.013687138, 0.3929063, 0.91102105)
bones/9/scale = Vector3(1.0000002, 0.9999995, 0.9999999)
bones/10/name = "wrist.r"
bones/10/parent = 9
bones/10/rest = Transform3D(0.99857867, 0.053297248, 6.1252675e-10, -0.053297248, 0.99857867, -1.1873953e-10, -6.1798466e-10, 8.592478e-11, 0.99999994, -7.426282e-09, 0.26004383, 6.127964e-11)
bones/10/enabled = true
bones/10/position = Vector3(-7.426282e-09, 0.26004383, 6.127964e-11)
bones/10/rotation = Quaternion(-0.018241191, 0.033219386, 0.02831175, 0.9988805)
bones/10/scale = Vector3(1.0000001, 1, 1)
bones/11/name = "hand.r"
bones/11/parent = 10
bones/11/rest = Transform3D(1, -1.091039e-05, -1.8421935e-07, 1.0910391e-05, 0.99999994, -2.4008373e-09, 1.8421939e-07, 2.3988274e-09, 0.99999994, 3.996803e-15, 0.073825836, -2.220446e-16)
bones/11/enabled = true
bones/11/position = Vector3(3.996803e-15, 0.073825836, -2.220446e-16)
bones/11/rotation = Quaternion(-0.2666806, 0.74386436, -0.11057619, 0.6027605)
bones/11/scale = Vector3(0.9999998, 0.99999994, 1.0000002)
bones/12/name = "handslot.r"
bones/12/parent = 11
bones/12/rest = Transform3D(-1.1920929e-07, -1, 3.4460874e-16, 0.99999994, -1.192093e-07, -4.7534323e-09, 4.7534323e-09, -2.2204463e-16, 0.99999994, -5.1389204e-10, 0.09612507, -0.057500124)
bones/12/enabled = true
bones/12/position = Vector3(0.41111678, 0.34205556, 0.55543995)
bones/12/rotation = Quaternion(-0.4289056, -0.7495353, 0.20982666, 0.4584863)
bones/12/scale = Vector3(1, 1.0000001, 1.0000001)
bones/13/name = "head"
bones/13/parent = 7
bones/13/rest = Transform3D(1, 0, 8.4703295e-22, 0, 1, 0, -8.4703295e-22, 0, 1, 0, 0.26879656, 0)
bones/13/enabled = true
bones/13/position = Vector3(0, 0.26879656, 0)
bones/13/rotation = Quaternion(-0.05683034, -0.22126763, 0.41381702, 0.88123006)
bones/13/scale = Vector3(1.0000001, 1.0000001, 1)
bones/14/name = "upperarm.l"
bones/14/parent = 7
bones/14/rest = Transform3D(0.057284202, 0.9983573, -4.5386042e-07, -3.8742996e-07, 4.768369e-07, 0.99999976, 0.9983573, -0.057284202, 4.1410917e-07, 0.21200737, 0.13413215, 8.402462e-08)
bones/14/enabled = true
bones/14/position = Vector3(0.82918704, 0.28671566, -0.020740286)
bones/14/rotation = Quaternion(-0.13977191, -0.2341367, -0.8242557, 0.49623218)
bones/14/scale = Vector3(0.9999996, 0.9999993, 0.99999994)
bones/15/name = "lowerarm.l"
bones/15/parent = 14
bones/15/rest = Transform3D(0.99388725, 0.11040192, -1.2453701e-07, -0.110401966, 0.9938869, 3.9025445e-09, 1.2420661e-07, 9.87044e-09, 0.99999994, -3.2196643e-09, 0.2418973, -1.1940561e-07)
bones/15/enabled = true
bones/15/position = Vector3(-3.2196643e-09, 0.2418973, -1.1940561e-07)
bones/15/rotation = Quaternion(1.1026356e-08, -1.3606795e-08, -0.6016585, 0.79875344)
bones/15/scale = Vector3(1.0000002, 0.9999999, 0.99999994)
bones/16/name = "wrist.l"
bones/16/parent = 15
bones/16/rest = Transform3D(0.99857867, -0.053297248, -6.125374e-10, 0.053297248, 0.99857867, -1.1874038e-10, 6.179954e-10, 8.5925066e-11, 0.99999994, 7.426282e-09, 0.26004383, 6.127964e-11)
bones/16/enabled = true
bones/16/position = Vector3(7.426282e-09, 0.26004383, 6.127964e-11)
bones/16/rotation = Quaternion(1.4968771e-08, -7.251234e-10, 0.026658088, 0.99964464)
bones/16/scale = Vector3(0.99999994, 1, 1.0000001)
bones/17/name = "hand.l"
bones/17/parent = 16
bones/17/rest = Transform3D(1, 1.091039e-05, 2.7178578e-07, -1.0910391e-05, 0.99999994, -2.40181e-09, -2.7178584e-07, 2.398845e-09, 0.99999994, 9.054979e-13, 0.073825836, -2.220446e-16)
bones/17/enabled = true
bones/17/position = Vector3(9.054979e-13, 0.073825836, -2.220446e-16)
bones/17/rotation = Quaternion(-0.12613803, -0.4442744, 0.21356444, 0.8608715)
bones/17/scale = Vector3(0.9999998, 0.9999999, 1.0000004)
bones/18/name = "handslot.l"
bones/18/parent = 17
bones/18/rest = Transform3D(-1.1920929e-07, 1, -3.4461551e-16, -0.99999994, -1.192093e-07, -4.753489e-09, -4.753489e-09, -2.2204463e-16, 0.99999994, 5.1389204e-10, 0.09612507, -0.057500124)
bones/18/enabled = true
bones/18/position = Vector3(-0.8424763, 0.22221999, 0.010400772)
bones/18/rotation = Quaternion(0.7568442, -0.42245173, -0.38522464, 0.31673887)
bones/18/scale = Vector3(0.99999994, 1.0000001, 1.0000001)
bones/19/name = "upperleg.r"
bones/19/parent = 1
bones/19/rest = Transform3D(1, 1.4961098e-07, -6.086259e-08, 1.4740625e-07, -0.9993962, -0.034741182, -6.6023425e-08, 0.034741133, -0.9993976, -0.17094506, 0.11358726, 1.3923272e-08)
bones/19/enabled = true
bones/19/position = Vector3(-0.57157826, 0.10608964, -0.027449233)
bones/19/rotation = Quaternion(0.51935774, -0.8485575, -0.06497375, 0.07743524)
bones/19/scale = Vector3(1.0000004, 1.0000002, 1.000001)
bones/20/name = "lowerleg.r"
bones/20/parent = 19
bones/20/rest = Transform3D(1, -1.612898e-07, -1.2085526e-07, 1.3211935e-07, 0.9774329, -0.21124826, 1.522e-07, 0.21124834, 0.97743255, -3.5798609e-09, 0.2270775, -6.1393925e-09)
bones/20/enabled = true
bones/20/position = Vector3(-3.5798609e-09, 0.2270775, -6.1393925e-09)
bones/20/rotation = Quaternion(0.7141634, -6.3880115e-08, 5.506643e-07, 0.699979)
bones/20/scale = Vector3(0.99999994, 0.99999976, 0.99999994)
bones/21/name = "foot.r"
bones/21/parent = 20
bones/21/rest = Transform3D(1, -1.5513098e-07, 2.9352051e-07, -1.471147e-07, 0.5855154, 0.8106606, -2.976195e-07, -0.81066227, 0.5855142, -1.8315699e-10, 0.14943703, 9.667975e-10)
bones/21/enabled = true
bones/21/position = Vector3(-1.8315699e-10, 0.14943703, 9.667975e-10)
bones/21/rotation = Quaternion(-0.42176753, -0.13973166, -0.55218613, 0.7054628)
bones/21/scale = Vector3(0.99999976, 1.0000006, 0.9999992)
bones/22/name = "toes.r"
bones/22/parent = 21
bones/22/rest = Transform3D(-1, 8.9513634e-08, 1.0213962e-07, -1.13950165e-08, 0.6941041, -0.7198751, -1.3533412e-07, -0.71987, -0.694109, 2.129614e-10, 0.16565003, 5.1719318e-09)
bones/22/enabled = true
bones/22/position = Vector3(2.129614e-10, 0.16565003, 5.1719318e-09)
bones/22/rotation = Quaternion(0.08970163, 0.9450028, -0.2344433, -0.20966564)
bones/22/scale = Vector3(1.0000002, 0.9999979, 1.0000024)

[node name="ArmLeft" type="MeshInstance3D" parent="Rig_Medium/Skeleton3D" unique_id=5429579]
unique_name_in_owner = true
material_overlay = ExtResource("2_wkum4")

[node name="ArmRight" type="MeshInstance3D" parent="Rig_Medium/Skeleton3D" unique_id=1231558739]
unique_name_in_owner = true
material_overlay = ExtResource("2_wkum4")

[node name="Body" type="MeshInstance3D" parent="Rig_Medium/Skeleton3D" unique_id=273734121]
unique_name_in_owner = true
material_overlay = ExtResource("2_wkum4")

[node name="Cloak" type="MeshInstance3D" parent="Rig_Medium/Skeleton3D" unique_id=1130494312]
unique_name_in_owner = true
material_overlay = ExtResource("2_wkum4")

[node name="Eyes" type="MeshInstance3D" parent="Rig_Medium/Skeleton3D" unique_id=34233806]

[node name="Head" type="MeshInstance3D" parent="Rig_Medium/Skeleton3D" unique_id=2119615749]
unique_name_in_owner = true
material_overlay = ExtResource("2_wkum4")

[node name="Jaw" type="MeshInstance3D" parent="Rig_Medium/Skeleton3D" unique_id=980090098]
unique_name_in_owner = true

[node name="LegLeft" type="MeshInstance3D" parent="Rig_Medium/Skeleton3D" unique_id=406788631]
unique_name_in_owner = true
material_overlay = ExtResource("2_wkum4")

[node name="LegRight" type="MeshInstance3D" parent="Rig_Medium/Skeleton3D" unique_id=1409058516]
unique_name_in_owner = true
material_overlay = ExtResource("2_wkum4")

[node name="Accessory1" type="MeshInstance3D" parent="Rig_Medium/Skeleton3D" unique_id=1656953029]
unique_name_in_owner = true
material_overlay = ExtResource("2_wkum4")

[node name="Accessory2" type="MeshInstance3D" parent="Rig_Medium/Skeleton3D" unique_id=1256412289]
unique_name_in_owner = true
material_overlay = ExtResource("2_wkum4")

[node name="Accessory3" type="MeshInstance3D" parent="Rig_Medium/Skeleton3D" unique_id=1309845412]
unique_name_in_owner = true
material_overlay = ExtResource("2_wkum4")

[node name="MainHand" type="BoneAttachment3D" parent="Rig_Medium/Skeleton3D" unique_id=2131899076]
transform = Transform3D(-0.6849559, 0.70532525, -0.18262154, -0.24844676, 0.00951767, 0.9685991, 0.68491507, 0.7088199, 0.1687164, -2.1451986, -0.6101892, 0.14885888)
bone_name = "handslot.r"
bone_idx = 12

[node name="WeaponMesh" type="MeshInstance3D" parent="Rig_Medium/Skeleton3D/MainHand" unique_id=1607898715]
unique_name_in_owner = true
transform = Transform3D(-1.0000001, 0, -8.742278e-08, 0, 1.0000001, 0, 8.7422784e-08, 0, -1, 0, 0, 0)
material_overlay = ExtResource("2_wkum4")

[node name="HitBox" type="Area3D" parent="Rig_Medium/Skeleton3D/MainHand" unique_id=2094923151]
unique_name_in_owner = true
collision_layer = 8
collision_mask = 2
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rig_Medium/Skeleton3D/MainHand/HitBox" unique_id=158395939]
transform = Transform3D(-1.0000001, 5.684342e-14, -8.742278e-08, -5.684342e-14, 1.0000001, -5.684342e-14, 8.7422734e-08, 5.684342e-14, -1, 0, 0, 0)
shape = SubResource("CapsuleShape3D_0bbxc")

[node name="OffHand" type="BoneAttachment3D" parent="Rig_Medium/Skeleton3D" unique_id=372457386]
transform = Transform3D(-0.910478, 0.41182417, -0.037804306, 0.050048396, 0.018983305, -0.99856657, -0.41051596, -0.9110655, -0.037894517, 1.574923, -0.5408241, -0.88008755)
bone_name = "handslot.l"
bone_idx = 18

[node name="WeaponShieldRelic" type="MeshInstance3D" parent="Rig_Medium/Skeleton3D/OffHand" unique_id=1836959712]
unique_name_in_owner = true
transform = Transform3D(1, 0, -2.9510831e-15, 2.842171e-14, 0.99999994, 0, 3.348992e-15, 0, 0.99999994, 0, -2.7978444e-08, 0.1052531)
material_overlay = ExtResource("2_wkum4")

[node name="HealthBarAttachment" type="BoneAttachment3D" parent="Rig_Medium/Skeleton3D" unique_id=566187103]
transform = Transform3D(0.10597728, -0.9617432, -0.25262356, 0.30657, -0.21007729, 0.92837656, -0.9459303, -0.1758334, 0.2725782, 0.019863278, 0.03609139, -0.6189235)
bone_name = "head"
bone_idx = 13

[node name="EnemyWorldDataDisplay" type="Sprite3D" parent="Rig_Medium/Skeleton3D/HealthBarAttachment" unique_id=247133895]
unique_name_in_owner = true
transform = Transform3D(1.29, 0, 0, 0, 1.29, 0, 0, 0, 1.29, 0, 1.8400059, 0)
billboard = 1
texture = SubResource("ViewportTexture_ml3mr")
script = ExtResource("4_rblcv")

[node name="SubViewport" type="SubViewport" parent="Rig_Medium/Skeleton3D/HealthBarAttachment/EnemyWorldDataDisplay" unique_id=1992533132]
transparent_bg = true
size = Vector2i(181, 48)

[node name="VBoxContainer" type="VBoxContainer" parent="Rig_Medium/Skeleton3D/HealthBarAttachment/EnemyWorldDataDisplay/SubViewport" unique_id=1819225262]
offset_right = 171.0
offset_bottom = 40.0
alignment = 1

[node name="Entity_Name" type="Label" parent="Rig_Medium/Skeleton3D/HealthBarAttachment/EnemyWorldDataDisplay/SubViewport/VBoxContainer" unique_id=1207248926]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.99426365, 0.47427702, 0.47427702, 1)
theme_override_font_sizes/font_size = 20
text = "Skeletal Grunt"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Rig_Medium/Skeleton3D/HealthBarAttachment/EnemyWorldDataDisplay/SubViewport/VBoxContainer" unique_id=1919442531]
layout_mode = 2
alignment = 1

[node name="Level" type="Label" parent="Rig_Medium/Skeleton3D/HealthBarAttachment/EnemyWorldDataDisplay/SubViewport/VBoxContainer/HBoxContainer" unique_id=660191963]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
theme_override_colors/font_outline_color = Color(1, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 20
text = "30"

[node name="HealthBar" type="ProgressBar" parent="Rig_Medium/Skeleton3D/HealthBarAttachment/EnemyWorldDataDisplay/SubViewport/VBoxContainer/HBoxContainer" unique_id=843204246]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_styles/background = ExtResource("16_woysm")
theme_override_styles/fill = SubResource("StyleBoxFlat_81xlm")
value = 50.0

[node name="HurtBoxComponent" type="BoneAttachment3D" parent="Rig_Medium/Skeleton3D" unique_id=1208993434]
unique_name_in_owner = true
transform = Transform3D(0.10597728, -0.9617432, -0.25262356, 0.30657, -0.21007729, 0.92837656, -0.9459303, -0.1758334, 0.2725782, 0.019863278, 0.03609139, -0.6189235)
bone_name = "head"
bone_idx = 13
script = ExtResource("6_j5l5s")

[node name="HurtBox" type="Area3D" parent="Rig_Medium/Skeleton3D/HurtBoxComponent" unique_id=943353609]
unique_name_in_owner = true
collision_layer = 4
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rig_Medium/Skeleton3D/HurtBoxComponent/HurtBox" unique_id=1994600902]
unique_name_in_owner = true
transform = Transform3D(1.0000035, -4.656613e-10, 1.8626451e-09, -3.259629e-09, 1, 0, -2.2351742e-08, 0, 1.000001, 0, 0, 0)
shape = SubResource("CapsuleShape3D_o5540")
debug_color = Color(1, 0, 0, 0.41960785)

[node name="InvincibilityTimer" type="Timer" parent="Rig_Medium/Skeleton3D/HurtBoxComponent/HurtBox" unique_id=1418344381]
unique_name_in_owner = true
wait_time = 0.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=377001723]
unique_name_in_owner = true
libraries/Enemy = SubResource("AnimationLibrary_1fxax")

[node name="AnimationTree" type="AnimationTree" parent="." unique_id=1663489562]
unique_name_in_owner = true
root_node = NodePath("%AnimationTree/..")
tree_root = SubResource("AnimationNodeBlendTree_bftp8")
anim_player = NodePath("../AnimationPlayer")

[node name="StatComponent" type="Node" parent="." unique_id=715719646]
unique_name_in_owner = true
script = ExtResource("20_o5540")
metadata/_custom_type_script = "uid://c5l5du3uioa4l"

[node name="EnemyHealthComponent" type="Node" parent="." unique_id=643508889]
script = ExtResource("20_j5l5s")

[node name="EnemyAnimationComponent" type="Node" parent="." unique_id=401081840]
unique_name_in_owner = true
script = ExtResource("21_o5540")

[node name="TargetingComponent" parent="." unique_id=497121743 instance=ExtResource("21_rblcv")]
unique_name_in_owner = true

[node name="EnemyVisualsComponent" type="Node" parent="." unique_id=1334737486 node_paths=PackedStringArray("arm_left", "arm_right", "body", "cloak", "eyes", "head", "jaw", "leg_left", "leg_right", "accessory_1", "accessory_2", "accessory_3", "weapon_mesh", "weapon_shield_relic")]
unique_name_in_owner = true
script = ExtResource("21_vceqd")
arm_left = NodePath("../Rig_Medium/Skeleton3D/ArmLeft")
arm_right = NodePath("../Rig_Medium/Skeleton3D/ArmRight")
body = NodePath("../Rig_Medium/Skeleton3D/Body")
cloak = NodePath("../Rig_Medium/Skeleton3D/Cloak")
eyes = NodePath("../Rig_Medium/Skeleton3D/Eyes")
head = NodePath("../Rig_Medium/Skeleton3D/Head")
jaw = NodePath("../Rig_Medium/Skeleton3D/Jaw")
leg_left = NodePath("../Rig_Medium/Skeleton3D/LegLeft")
leg_right = NodePath("../Rig_Medium/Skeleton3D/LegRight")
accessory_1 = NodePath("../Rig_Medium/Skeleton3D/Accessory1")
accessory_2 = NodePath("../Rig_Medium/Skeleton3D/Accessory2")
accessory_3 = NodePath("../Rig_Medium/Skeleton3D/Accessory3")
weapon_mesh = NodePath("../Rig_Medium/Skeleton3D/MainHand/WeaponMesh")
weapon_shield_relic = NodePath("../Rig_Medium/Skeleton3D/OffHand/WeaponShieldRelic")

[node name="EnemyMeleeCombatComponent" type="Node" parent="." unique_id=445102315]
unique_name_in_owner = true
script = ExtResource("28_rblcv")

[node name="EnemyRangeCombatComponent" type="Node" parent="." unique_id=652966593]
unique_name_in_owner = true
script = ExtResource("23_bftp8")

[node name="ChaseComponent" type="Node" parent="." unique_id=873530756]
unique_name_in_owner = true
script = ExtResource("23_ppa7q")

[node name="AIControllerComponent" type="Node" parent="." unique_id=566643475]
unique_name_in_owner = true
script = ExtResource("24_ppa7q")

[node name="StatusEffectComponent" type="Node" parent="." unique_id=1872495655]
unique_name_in_owner = true
script = ExtResource("26_rblcv")

[node name="EnemyLevelComponent" type="Node" parent="." unique_id=1247198703]
unique_name_in_owner = true
script = ExtResource("27_o5540")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="." unique_id=1149069278]
unique_name_in_owner = true

[connection signal="area_entered" from="Rig_Medium/Skeleton3D/HurtBoxComponent/HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_entered" from="Rig_Medium/Skeleton3D/HurtBoxComponent/HurtBox" to="EnemyHealthComponent" method="_on_hurt_box_area_entered"]
[connection signal="timeout" from="Rig_Medium/Skeleton3D/HurtBoxComponent/HurtBox/InvincibilityTimer" to="Rig_Medium/Skeleton3D/HurtBoxComponent" method="_on_invincibility_timer_timeout"]
[connection signal="dead" from="EnemyHealthComponent" to="Rig_Medium/Skeleton3D/HurtBoxComponent" method="_on_enemy_health_component_dead"]
[connection signal="new_target" from="TargetingComponent" to="AIControllerComponent" method="_on_targeting_component_new_target"]
